11. network policies/egress-deny-all/mysql-egress-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysqldb-deny-egress-from-mysql-to-internet
  namespace: mysqldb
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Egress
  egress: []
