11. network policies/egress-deny-all/mysql-egress-specific-ns-port.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysqldb-deny-egress-from-mysql-to-internet-and-ns-and-specific-ports
  namespace: mysqldb
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Egress
  egress:
  - to:
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 192.168.0.0/16
      - namespaceSelector:
          matchLabels:
            nsp: hyderabad
        podSelector:
          matchLabels:
            ns: hyderabad
  - ports:
      - protocol: TCP
        port: 80
      - protocol: TCP
        port: 443

---
# Sample 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
